--- a/.env.example
+++ b/.env.example
@@ -19,7 +19,7 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
- DB_CONNECTION=sqlite
+# DB_CONNECTION=sqlite
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
 # DB_DATABASE=laravel
@@ -64,10 +64,10 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 
 # Oracle Connection
-#DB_CONNECTION=oracle
-#DB_HOST=localhost
-#DB_PORT=1521
-#DB_SERVICE_NAME=orcl
-#DB_DATABASE=orcl
-#DB_USERNAME=sudee
-#DB_PASSWORD=oracle
+DB_CONNECTION=oracle
+DB_HOST=localhost
+DB_PORT=1521
+DB_SERVICE_NAME=orcl
+DB_DATABASE=orcl
+DB_USERNAME=sudee
+DB_PASSWORD=oracle
